--- a/registrarse.css
+++ b/registrarse.css
@@ -9,7 +9,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .register-container {
     background: #ffffff;
     padding: 2rem;
@@ -18,6 +17,7 @@ body {
     max-width: 500px;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
     animation: fadeIn 1s ease-in;
+    margin-top: 600px; /* Añadir un margin-top para empujar el formulario hacia abajo */
 }
 
 h2 {
@@ -27,6 +27,8 @@ h2 {
     color: #212529;
     text-align: center;
     animation: fadeIn 0.5s ease-in;
+    border-bottom: 2px solid #007bff;
+    padding-bottom: 0.5rem;
 }
 
 label {
@@ -50,6 +52,7 @@ select {
     color: #495057;
     box-sizing: border-box;
     transition: border-color 0.3s ease;
+    background-color: #f8f9fa;
 }
 
 input[type="text"]:focus,
