--- a/Panel_de_control.css
+++ b/Panel_de_control.css
@@ -1,3 +1,37 @@
-.hola{
-    margin-left: 800px;
+.sidebar {
+    
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user-info h2 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.logout-btn {
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #dc3545;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 20px;
+}
+
+.logout-btn:hover {
+    background-color: #c82333;
+}
+
+.logout-btn i {
+    margin-right: 8px;
 }
